# parsical

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
frame/: lexer.frame
src/: CMakeLists.txt  comparable-set.hpp  driver.cpp  driver.hpp  fa.cpp  fa.hpp  first-set.cpp  first-set.hpp  lexer.cpp  lexer.frame  lexer.hpp  main.cpp  normalize.cpp  normalize.hpp  parser.hpp  parsical-parser.cpp  parsical-parser.hpp  parsical.gr  print-visitor.cpp  print-visitor.hpp  report.cpp  report.hpp  rule-info.cpp  rule-info.hpp  symbol-info.cpp  symbol-info.hpp  token-info.cpp  token-info.hpp
src/parse/: Makefile  lex.l  lex.yy.cpp  parse.output  parse.tab.c  parse.tab.cpp  parse.tab.h  parse.tab.hpp  parse.y  parse_regex.hpp  parse_string.hpp
